--- a/careers.html
+++ b/careers.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="nl">
- <head>
+<!DOCTYPE html><html lang="nl"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carrières - Premium Horloges | Werk bij ons</title>
@@ -20,7 +18,7 @@
     <div class="container-fluid">
      <a class="navbar-brand" href="/" aria-label="Luxe Horloges - Home"> 
       <svg width="150" height="40" viewBox="0 0 150 40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-       <circle cx="20" cy="20" r="15" stroke="#3d0066" stroke-width="2" fill="none" /> <circle cx="20" cy="20" r="2" fill="#a8ff00" /> <line x1="20" y1="20" x2="20" y2="10" stroke="#3d0066" stroke-width="2" stroke-linecap="round" /> <line x1="20" y1="20" x2="27" y2="20" stroke="#3d0066" stroke-width="1.5" stroke-linecap="round" /> <text x="45" y="27" font-family="Arial, sans-serif" font-size="18" font-weight="bold" fill="#3d0066">Luxe Horloges</text>
+       <circle cx="20" cy="20" r="15" stroke="#3d0066" stroke-width="2" fill="none"></circle> <circle cx="20" cy="20" r="2" fill="#a8ff00"></circle> <line x1="20" y1="20" x2="20" y2="10" stroke="#3d0066" stroke-width="2" stroke-linecap="round"></line> <line x1="20" y1="20" x2="27" y2="20" stroke="#3d0066" stroke-width="1.5" stroke-linecap="round"></line> <text x="45" y="27" font-family="Arial, sans-serif" font-size="18" font-weight="bold" fill="#3d0066">Luxe Horloges</text>
       </svg> 
      </a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -52,7 +50,7 @@
       </div>
       <div class="col-12 col-lg-6 mt-4 mt-lg-0" data-aos="fade-left">
        <div class="ratio ratio-16x9">
-        <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?w=800&amp;h=600&amp;fit=crop" alt="Modern kantoor met medewerkers in samenwerking" class="img-fluid" loading="lazy" width="800" height="600" style="object-fit: cover; border-radius: 8px;">
+        <img src="img/6859.jpg" alt="Modern kantoor met medewerkers in samenwerking" class="img-fluid" loading="lazy" width="800" height="600" style="object-fit: cover; border-radius: 8px;">
        </div>
       </div>
      </div>
@@ -72,7 +70,7 @@
         <div class="card-body d-flex flex-column">
          <div class="ratio ratio-1x1 mb-3" style="width: 64px; height: 64px;">
           <svg viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Groei icoon">
-           <rect x="8" y="40" width="12" height="16" fill="#CDDC39" /> <rect x="26" y="28" width="12" height="28" fill="#4A148C" /> <rect x="44" y="16" width="12" height="40" fill="#00BCD4" />
+           <rect x="8" y="40" width="12" height="16" fill="#CDDC39"></rect> <rect x="26" y="28" width="12" height="28" fill="#4A148C"></rect> <rect x="44" y="16" width="12" height="40" fill="#00BCD4"></rect>
           </svg>
          </div>
          <h3 class="h5 fw-bold mb-3">Professionele Groei</h3>
@@ -85,7 +83,7 @@
         <div class="card-body d-flex flex-column">
          <div class="ratio ratio-1x1 mb-3" style="width: 64px; height: 64px;">
           <svg viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Team icoon">
-           <circle cx="22" cy="18" r="8" fill="#4A148C" /> <circle cx="42" cy="18" r="8" fill="#CDDC39" /> <path d="M32 48C32 40 26 36 22 36C18 36 10 40 10 48H32Z" fill="#4A148C" /> <path d="M54 48C54 40 48 36 42 36C38 36 32 40 32 48H54Z" fill="#00BCD4" />
+           <circle cx="22" cy="18" r="8" fill="#4A148C"></circle> <circle cx="42" cy="18" r="8" fill="#CDDC39"></circle> <path d="M32 48C32 40 26 36 22 36C18 36 10 40 10 48H32Z" fill="#4A148C"></path> <path d="M54 48C54 40 48 36 42 36C38 36 32 40 32 48H54Z" fill="#00BCD4"></path>
           </svg>
          </div>
          <h3 class="h5 fw-bold mb-3">Samenwerkingscultuur</h3>
@@ -98,7 +96,7 @@
         <div class="card-body d-flex flex-column">
          <div class="ratio ratio-1x1 mb-3" style="width: 64px; height: 64px;">
           <svg viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Balans icoon">
-           <circle cx="32" cy="32" r="24" stroke="#4A148C" stroke-width="3" fill="none" /> <path d="M32 12 L32 32 L44 32" stroke="#CDDC39" stroke-width="3" stroke-linecap="round" />
+           <circle cx="32" cy="32" r="24" stroke="#4A148C" stroke-width="3" fill="none"></circle> <path d="M32 12 L32 32 L44 32" stroke="#CDDC39" stroke-width="3" stroke-linecap="round"></path>
           </svg>
          </div>
          <h3 class="h5 fw-bold mb-3">Werk-Privébalans</h3>
@@ -111,7 +109,7 @@
         <div class="card-body d-flex flex-column">
          <div class="ratio ratio-1x1 mb-3" style="width: 64px; height: 64px;">
           <svg viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Voordelen icoon">
-           <rect x="12" y="20" width="40" height="28" rx="4" fill="#00BCD4" /> <rect x="20" y="12" width="24" height="8" fill="#CDDC39" />
+           <rect x="12" y="20" width="40" height="28" rx="4" fill="#00BCD4"></rect> <rect x="20" y="12" width="24" height="8" fill="#CDDC39"></rect>
           </svg>
          </div>
          <h3 class="h5 fw-bold mb-3">Aantrekkelijke Voordelen</h3>
@@ -124,7 +122,7 @@
         <div class="card-body d-flex flex-column">
          <div class="ratio ratio-1x1 mb-3" style="width: 64px; height: 64px;">
           <svg viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Innovatie icoon">
-           <path d="M32 8 L24 24 L32 24 L28 40 L40 24 L32 24 L36 8 Z" fill="#CDDC39" /> <circle cx="32" cy="32" r="28" stroke="#4A148C" stroke-width="2" fill="none" />
+           <path d="M32 8 L24 24 L32 24 L28 40 L40 24 L32 24 L36 8 Z" fill="#CDDC39"></path> <circle cx="32" cy="32" r="28" stroke="#4A148C" stroke-width="2" fill="none"></circle>
           </svg>
          </div>
          <h3 class="h5 fw-bold mb-3">Innovatie &amp; Creativiteit</h3>
@@ -137,7 +135,7 @@
         <div class="card-body d-flex flex-column">
          <div class="ratio ratio-1x1 mb-3" style="width: 64px; height: 64px;">
           <svg viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Locatie icoon">
-           <path d="M32 8 C24 8 16 16 16 26 C16 38 32 56 32 56 C32 56 48 38 48 26 C48 16 40 8 32 8 Z" fill="#4A148C" /> <circle cx="32" cy="26" r="6" fill="#CDDC39" />
+           <path d="M32 8 C24 8 16 16 16 26 C16 38 32 56 32 56 C32 56 48 38 48 26 C48 16 40 8 32 8 Z" fill="#4A148C"></path> <circle cx="32" cy="26" r="6" fill="#CDDC39"></circle>
           </svg>
          </div>
          <h3 class="h5 fw-bold mb-3">Toplocaties</h3>
@@ -249,7 +247,7 @@
      <div class="row align-items-center">
       <div class="col-12 col-lg-6 order-2 order-lg-1 mt-4 mt-lg-0" data-aos="fade-right">
        <div class="ratio ratio-4x3">
-        <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=800&amp;h=600&amp;fit=crop" alt="Jonge professionals in moderne werkruimte tijdens training" class="img-fluid" loading="lazy" width="800" height="600" style="object-fit: cover; border-radius: 8px;">
+        <img src="img/40349.jpg" alt="Jonge professionals in moderne werkruimte tijdens training" class="img-fluid" loading="lazy" width="800" height="600" style="object-fit: cover; border-radius: 8px;">
        </div>
       </div>
       <div class="col-12 col-lg-6 order-1 order-lg-2" data-aos="fade-left">
@@ -292,7 +290,7 @@
         <div class="card-body d-flex flex-column">
          <div class="d-flex align-items-center mb-3">
           <div class="ratio ratio-1x1 me-3" style="width: 64px; height: 64px;">
-           <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=150&amp;h=150&amp;fit=crop" alt="Portret van Thomas van der Berg" class="img-fluid" loading="lazy" width="150" height="150" style="object-fit: cover; border-radius: 50%;">
+           <img src="img/88582.jpg" alt="Portret van Thomas van der Berg" class="img-fluid" loading="lazy" width="150" height="150" style="object-fit: cover; border-radius: 50%;">
           </div>
           <div>
            <h3 class="h6 fw-bold mb-0">Thomas van der Berg</h3>
@@ -308,7 +306,7 @@
         <div class="card-body d-flex flex-column">
          <div class="d-flex align-items-center mb-3">
           <div class="ratio ratio-1x1 me-3" style="width: 64px; height: 64px;">
-           <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=150&amp;h=150&amp;fit=crop" alt="Portret van Sophie Jansen" class="img-fluid" loading="lazy" width="150" height="150" style="object-fit: cover; border-radius: 50%;">
+           <img src="img/213.jpg" alt="Portret van Sophie Jansen" class="img-fluid" loading="lazy" width="150" height="150" style="object-fit: cover; border-radius: 50%;">
           </div>
           <div>
            <h3 class="h6 fw-bold mb-0">Sophie Jansen</h3>
@@ -324,7 +322,7 @@
         <div class="card-body d-flex flex-column">
          <div class="d-flex align-items-center mb-3">
           <div class="ratio ratio-1x1 me-3" style="width: 64px; height: 64px;">
-           <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=150&amp;h=150&amp;fit=crop" alt="Portret van Mark de Vries" class="img-fluid" loading="lazy" width="150" height="150" style="object-fit: cover; border-radius: 50%;">
+           <img src="img/25731232.jpg" alt="Portret van Mark de Vries" class="img-fluid" loading="lazy" width="150" height="150" style="object-fit: cover; border-radius: 50%;">
           </div>
           <div>
            <h3 class="h6 fw-bold mb-0">Mark de Vries</h3>
@@ -346,26 +344,26 @@
         <div class="card-body p-4 p-md-5">
          <h2 class="h3 fw-bold mb-3 text-center">Solliciteer Nu</h2>
          <p class="text-center mb-4">Vul het formulier in of stuur je CV direct naar <a href="mailto:info@domain.com" class="text-decoration-none">info@domain.com</a></p>
-         <form action="https://domain.com/submit-application" method="POST" class="needs-validation" novalidate>
+         <form action="https://domain.com/submit-application" method="POST" class="needs-validation" novalidate="">
           <div class="row g-3">
            <div class="col-12 col-md-6">
-            <label for="firstName" class="form-label">Voornaam <span class="text-danger">*</span></label> <input type="text" class="c-input form-control" id="firstName" name="firstName" required>
+            <label for="firstName" class="form-label">Voornaam <span class="text-danger">*</span></label> <input type="text" class="c-input form-control" id="firstName" name="firstName" required="">
             <div class="invalid-feedback">Vul je voornaam in.</div>
            </div>
            <div class="col-12 col-md-6">
-            <label for="lastName" class="form-label">Achternaam <span class="text-danger">*</span></label> <input type="text" class="c-input form-control" id="lastName" name="lastName" required>
+            <label for="lastName" class="form-label">Achternaam <span class="text-danger">*</span></label> <input type="text" class="c-input form-control" id="lastName" name="lastName" required="">
             <div class="invalid-feedback">Vul je achternaam in.</div>
            </div>
            <div class="col-12 col-md-6">
-            <label for="email" class="form-label">E-mailadres <span class="text-danger">*</span></label> <input type="email" class="c-input form-control" id="email" name="email" required>
+            <label for="email" class="form-label">E-mailadres <span class="text-danger">*</span></label> <input type="email" class="c-input form-control" id="email" name="email" required="">
             <div class="invalid-feedback">Vul een geldig e-mailadres in.</div>
            </div>
            <div class="col-12 col-md-6">
-            <label for="phone" class="form-label">Telefoonnummer <span class="text-danger">*</span></label> <input type="tel" class="c-input form-control" id="phone" name="phone" required>
+            <label for="phone" class="form-label">Telefoonnummer <span class="text-danger">*</span></label> <input type="tel" class="c-input form-control" id="phone" name="phone" required="">
             <div class="invalid-feedback">Vul je telefoonnummer in.</div>
            </div>
            <div class="col-12">
-            <label for="position" class="form-label">Gewenste functie <span class="text-danger">*</span></label> <select class="c-input form-select" id="position" name="position" required> <option value="" selected disabled>Kies een functie</option> <option value="senior-horlogemaker">Senior Horlogemaker</option> <option value="verkoopadviseur">Verkoopadviseur Luxe Horloges</option> <option value="marketing-manager">Marketing Manager</option> <option value="stagiair-klantenservice">Stagiair(e) Klantenservice</option> <option value="anders">Anders / Open sollicitatie</option> </select>
+            <label for="position" class="form-label">Gewenste functie <span class="text-danger">*</span></label> <select class="c-input form-select" id="position" name="position" required=""> <option value="" selected="" disabled="">Kies een functie</option> <option value="senior-horlogemaker">Senior Horlogemaker</option> <option value="verkoopadviseur">Verkoopadviseur Luxe Horloges</option> <option value="marketing-manager">Marketing Manager</option> <option value="stagiair-klantenservice">Stagiair(e) Klantenservice</option> <option value="anders">Anders / Open sollicitatie</option> </select>
             <div class="invalid-feedback">Selecteer een functie.</div>
            </div>
            <div class="col-12">
@@ -377,7 +375,7 @@
            </div>
            <div class="col-12">
             <div class="form-check">
-             <input class="form-check-input" type="checkbox" id="privacy" name="privacy" required> <label class="form-check-label" for="privacy"> Ik ga akkoord met de <a href="/privacy.html" class="text-decoration-none">privacyverklaring</a> en <a href="/terms_and_conditions.html" class="text-decoration-none">voorwaarden</a> <span class="text-danger">*</span> </label>
+             <input class="form-check-input" type="checkbox" id="privacy" name="privacy" required=""> <label class="form-check-label" for="privacy"> Ik ga akkoord met de <a href="/privacy.html" class="text-decoration-none">privacyverklaring</a> en <a href="/terms_and_conditions.html" class="text-decoration-none">voorwaarden</a> <span class="text-danger">*</span> </label>
              <div class="invalid-feedback">Je moet akkoord gaan met de voorwaarden.</div>
             </div>
            </div>
@@ -431,15 +429,15 @@
       <div class="d-flex gap-3">
        <a href="https://facebook.com" class="text-white-50" aria-label="Facebook"> 
         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-         <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
+         <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"></path>
         </svg> 
        </a> <a href="https://instagram.com" class="text-white-50" aria-label="Instagram"> 
         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-         <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
+         <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"></path>
         </svg> 
        </a> <a href="https://twitter.com" class="text-white-50" aria-label="Twitter"> 
         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-         <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z" />
+         <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"></path>
         </svg> 
        </a>
       </div>
@@ -456,6 +454,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
