--- a/about.html
+++ b/about.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="nl">
- <head>
+<!DOCTYPE html><html lang="nl"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Over Ons - Chronos Elite | Luxe Horloges in Nederland</title>
@@ -21,7 +19,7 @@
     <div class="container-fluid">
      <a class="navbar-brand" href="/" aria-label="Luxe Horloges - Home"> 
       <svg width="150" height="40" viewBox="0 0 150 40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-       <circle cx="20" cy="20" r="15" stroke="#3d0066" stroke-width="2" fill="none" /> <circle cx="20" cy="20" r="2" fill="#a8ff00" /> <line x1="20" y1="20" x2="20" y2="10" stroke="#3d0066" stroke-width="2" stroke-linecap="round" /> <line x1="20" y1="20" x2="27" y2="20" stroke="#3d0066" stroke-width="1.5" stroke-linecap="round" /> <text x="45" y="27" font-family="Arial, sans-serif" font-size="18" font-weight="bold" fill="#3d0066">Luxe Horloges</text>
+       <circle cx="20" cy="20" r="15" stroke="#3d0066" stroke-width="2" fill="none"></circle> <circle cx="20" cy="20" r="2" fill="#a8ff00"></circle> <line x1="20" y1="20" x2="20" y2="10" stroke="#3d0066" stroke-width="2" stroke-linecap="round"></line> <line x1="20" y1="20" x2="27" y2="20" stroke="#3d0066" stroke-width="1.5" stroke-linecap="round"></line> <text x="45" y="27" font-family="Arial, sans-serif" font-size="18" font-weight="bold" fill="#3d0066">Luxe Horloges</text>
       </svg> 
      </a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -54,7 +52,7 @@
      </div>
      <div class="col-12 col-lg-6" data-aos="fade-left">
       <div class="ratio ratio-4x3">
-       <img src="https://images.unsplash.com/photo-1611930022073-b7a4ba5fcccd?w=800&amp;h=600&amp;fit=crop" alt="Luxe horloges collectie in elegante showroom met moderne architectuur" class="img-fluid" style="object-fit: cover;" loading="lazy" width="800" height="600">
+       <img src="img/102718.jpg" alt="Luxe horloges collectie in elegante showroom met moderne architectuur" class="img-fluid" style="object-fit: cover;" loading="lazy" width="800" height="600">
       </div>
      </div>
     </div>
@@ -68,7 +66,7 @@
        <div class="card-body d-flex flex-column">
         <div class="mb-3">
          <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-          <circle cx="30" cy="30" r="28" stroke="#4A148C" stroke-width="3" fill="none" /> <path d="M30 15 L30 30 L40 40" stroke="#C6FF00" stroke-width="3" stroke-linecap="round" />
+          <circle cx="30" cy="30" r="28" stroke="#4A148C" stroke-width="3" fill="none"></circle> <path d="M30 15 L30 30 L40 40" stroke="#C6FF00" stroke-width="3" stroke-linecap="round"></path>
          </svg>
         </div>
         <h2 class="h3 mb-3">Onze Missie</h2>
@@ -81,7 +79,7 @@
        <div class="card-body d-flex flex-column">
         <div class="mb-3">
          <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-          <rect x="5" y="10" width="50" height="40" rx="4" stroke="#4A148C" stroke-width="3" fill="none" /> <circle cx="30" cy="30" r="8" fill="#C6FF00" /> <path d="M15 5 L30 15 L45 5" stroke="#C6FF00" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+          <rect x="5" y="10" width="50" height="40" rx="4" stroke="#4A148C" stroke-width="3" fill="none"></rect> <circle cx="30" cy="30" r="8" fill="#C6FF00"></circle> <path d="M15 5 L30 15 L45 5" stroke="#C6FF00" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"></path>
          </svg>
         </div>
         <h2 class="h3 mb-3">Onze Visie</h2>
@@ -104,7 +102,7 @@
      <div class="col-12 col-sm-6 col-lg-3" data-aos="zoom-in" data-aos-delay="0">
       <div class="card h-100 d-flex flex-column text-center border-0 shadow-sm">
        <div class="ratio ratio-1x1 mx-auto" style="max-width: 200px; margin-top: 2rem;">
-        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&amp;h=400&amp;fit=crop&amp;crop=faces" alt="Portret van Lars van der Berg, oprichter en directeur van Chronos Elite" class="img-fluid" style="object-fit: cover; border-radius: 50%;" loading="lazy" width="400" height="400">
+        <img src="img/20111.jpg" alt="Portret van Lars van der Berg, oprichter en directeur van Chronos Elite" class="img-fluid" style="object-fit: cover; border-radius: 50%;" loading="lazy" width="400" height="400">
        </div>
        <div class="card-body d-flex flex-column">
         <h3 class="h5 mb-1">Lars van der Berg</h3>
@@ -116,7 +114,7 @@
      <div class="col-12 col-sm-6 col-lg-3" data-aos="zoom-in" data-aos-delay="100">
       <div class="card h-100 d-flex flex-column text-center border-0 shadow-sm">
        <div class="ratio ratio-1x1 mx-auto" style="max-width: 200px; margin-top: 2rem;">
-        <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=400&amp;h=400&amp;fit=crop&amp;crop=faces" alt="Portret van Sophie Jansen, senior horloge adviseur" class="img-fluid" style="object-fit: cover; border-radius: 50%;" loading="lazy" width="400" height="400">
+        <img src="img/6747.jpg" alt="Portret van Sophie Jansen, senior horloge adviseur" class="img-fluid" style="object-fit: cover; border-radius: 50%;" loading="lazy" width="400" height="400">
        </div>
        <div class="card-body d-flex flex-column">
         <h3 class="h5 mb-1">Sophie Jansen</h3>
@@ -128,7 +126,7 @@
      <div class="col-12 col-sm-6 col-lg-3" data-aos="zoom-in" data-aos-delay="200">
       <div class="card h-100 d-flex flex-column text-center border-0 shadow-sm">
        <div class="ratio ratio-1x1 mx-auto" style="max-width: 200px; margin-top: 2rem;">
-        <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=400&amp;h=400&amp;fit=crop&amp;crop=faces" alt="Portret van Thomas de Vries, horlogemaker en technisch specialist" class="img-fluid" style="object-fit: cover; border-radius: 50%;" loading="lazy" width="400" height="400">
+        <img src="img/9124.jpg" alt="Portret van Thomas de Vries, horlogemaker en technisch specialist" class="img-fluid" style="object-fit: cover; border-radius: 50%;" loading="lazy" width="400" height="400">
        </div>
        <div class="card-body d-flex flex-column">
         <h3 class="h5 mb-1">Thomas de Vries</h3>
@@ -140,7 +138,7 @@
      <div class="col-12 col-sm-6 col-lg-3" data-aos="zoom-in" data-aos-delay="300">
       <div class="card h-100 d-flex flex-column text-center border-0 shadow-sm">
        <div class="ratio ratio-1x1 mx-auto" style="max-width: 200px; margin-top: 2rem;">
-        <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?w=400&amp;h=400&amp;fit=crop&amp;crop=faces" alt="Portret van Emma Bakker, klantenservice manager" class="img-fluid" style="object-fit: cover; border-radius: 50%;" loading="lazy" width="400" height="400">
+        <img src="img/34156.jpg" alt="Portret van Emma Bakker, klantenservice manager" class="img-fluid" style="object-fit: cover; border-radius: 50%;" loading="lazy" width="400" height="400">
        </div>
        <div class="card-body d-flex flex-column">
         <h3 class="h5 mb-1">Emma Bakker</h3>
@@ -176,7 +174,7 @@
      </div>
      <div class="col-12 col-lg-6 order-lg-1 mb-4 mb-lg-0" data-aos="fade-right">
       <div class="ratio ratio-4x3">
-       <img src="https://images.unsplash.com/photo-1509048191080-d2984bad6ae5?w=800&amp;h=600&amp;fit=crop" alt="Detailopname van luxe horloge mechanisme met precisie engineering" class="img-fluid" style="object-fit: cover;" loading="lazy" width="800" height="600">
+       <img src="img/3006680.jpg" alt="Detailopname van luxe horloge mechanisme met precisie engineering" class="img-fluid" style="object-fit: cover;" loading="lazy" width="800" height="600">
       </div>
      </div>
     </div>
@@ -193,7 +191,7 @@
         <div class="card h-100 border-0 shadow-sm">
          <div class="card-body text-center">
           <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" class="mb-3" aria-hidden="true">
-           <path d="M24 4L24 24L38 38" stroke="#4A148C" stroke-width="3" stroke-linecap="round" /> <circle cx="24" cy="24" r="20" stroke="#C6FF00" stroke-width="3" fill="none" />
+           <path d="M24 4L24 24L38 38" stroke="#4A148C" stroke-width="3" stroke-linecap="round"></path> <circle cx="24" cy="24" r="20" stroke="#C6FF00" stroke-width="3" fill="none"></circle>
           </svg>
           <h3 class="h5 fw-bold mb-2">Openingstijden</h3>
           <p class="mb-1">Ma - Vr: 10:00 - 18:00</p>
@@ -206,7 +204,7 @@
         <div class="card h-100 border-0 shadow-sm">
          <div class="card-body text-center">
           <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" class="mb-3" aria-hidden="true">
-           <path d="M24 8C17 8 12 13 12 20C12 28 24 40 24 40C24 40 36 28 36 20C36 13 31 8 24 8Z" stroke="#4A148C" stroke-width="3" fill="none" /> <circle cx="24" cy="20" r="4" fill="#C6FF00" />
+           <path d="M24 8C17 8 12 13 12 20C12 28 24 40 24 40C24 40 36 28 36 20C36 13 31 8 24 8Z" stroke="#4A148C" stroke-width="3" fill="none"></path> <circle cx="24" cy="20" r="4" fill="#C6FF00"></circle>
           </svg>
           <h3 class="h5 fw-bold mb-2">Adres</h3>
           <p class="mb-1">Herengracht 456</p>
@@ -218,7 +216,7 @@
         <div class="card h-100 border-0 shadow-sm">
          <div class="card-body text-center">
           <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" class="mb-3" aria-hidden="true">
-           <rect x="8" y="12" width="32" height="24" rx="2" stroke="#4A148C" stroke-width="3" fill="none" /> <path d="M8 16L24 26L40 16" stroke="#C6FF00" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+           <rect x="8" y="12" width="32" height="24" rx="2" stroke="#4A148C" stroke-width="3" fill="none"></rect> <path d="M8 16L24 26L40 16" stroke="#C6FF00" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
           <h3 class="h5 fw-bold mb-2">Contact</h3>
           <p class="mb-1"><a href="tel:+31201234567" class="text-decoration-none">+31 20 123 4567</a></p>
@@ -269,15 +267,15 @@
       <div class="d-flex gap-3">
        <a href="https://facebook.com" class="text-white-50" aria-label="Facebook"> 
         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-         <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
+         <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"></path>
         </svg> 
        </a> <a href="https://instagram.com" class="text-white-50" aria-label="Instagram"> 
         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-         <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
+         <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"></path>
         </svg> 
        </a> <a href="https://twitter.com" class="text-white-50" aria-label="Twitter"> 
         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-         <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z" />
+         <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"></path>
         </svg> 
        </a>
       </div>
@@ -294,6 +292,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
